--- a/index.html
+++ b/index.html
@@ -1,39 +1,94 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
-  </head>
-  <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Sender</button>
-    </form>
-    <!-- load the socket.io-client, which exposes a io global, and then connect. -->
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      $(function () {
-        var socket = io();
-        $('form').submit(function(e){
-          e.preventDefault(); // prevents page reloading
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
-        socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
-        });
-      });
-    </script>
-  </body>
+
+<head>
+  <title>Simple Group Chat on Node.js</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font: 13px Helvetica, Arial;
+      background: linear-gradient(rgb(91, 143, 248), #FF66FF);
+      border-radius: 6px;
+      height: 1000px;
+    }
+
+    form {
+      background: #fff;
+      padding: 3px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      border-color: #000;
+      border-top-style: solid;
+      border-top-width: 1px;
+    }
+
+    form input {
+      border-style: solid;
+      border-width: 1px;
+      padding: 10px;
+      width: 85%;
+      margin-right: .5%;
+    }
+
+    form button {
+      width: 9%;
+      background: rgb(130, 224, 255);
+      border: none;
+      padding: 10px;
+      margin-left: 2%;
+    }
+
+    #messages {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    #messages li {
+      padding: 5px 10px;
+    }
+  </style>
+  <script src="../../socket.io/socket.io.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+</head>
+
+<body>
+  <ul id="messages"></ul>
+  <form action="/" method="POST" id="chatForm">
+    <input id="txt" autocomplete="on" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button>Send</button>
+  </form>
+  <script>
+    var socket = io.connect('http://localhost:3000');
+    // submit text message without reload/refresh the page
+    $('form').submit(function (e) {
+      e.preventDefault(); // prevents page reloading
+      socket.emit('chat_message', $('#txt').val());
+      $('#txt').val('');
+      return false;
+    });
+    // append the chat text message
+    socket.on('chat_message', function (msg) {
+      $('#messages').append($('<li>').html(msg));
+    });
+    // append text if someone is online
+    socket.on('is_online', function (username) {
+      $('#messages').append($('<li>').html(username));
+    });
+
+    //display typing status in the convo box
+    socket.on('is_typing', function (username) {
+      $('#messages').append($('<li>').html(username));
+    });
+
+    // ask username
+    var username = prompt('Please tell me your name');
+    socket.emit('username', username);
+  </script>
+</body>
 </html>
