--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
   <ul id = "messages" class = "messages"></ul>
   <i id = "typing"></i>
 
-  <form action="/" method="POST" id="chatForm">
-    <input id="message" placeholder="type your message here..." /><button>Send</button>
+  <form action="/" method="POST" name="chatForm">
+    <!-- <input name="name" placeholder="Type your nickname here..." /><input type="submit" value="Set"> -->
+    <input id="message" placeholder="Say something" /><button>Send</button>
   </form>
   <script>
     var socket = io.connect('http://localhost:3000');
@@ -78,17 +79,30 @@
       $('#message').val('');
       return false;
     });
+
     //ask username
-    var username = prompt('Please tell me your name');
+    // var username = document.getElementById("name").value;
+    var username = prompt("Enter valid nickname");
     socket.emit('username', username);
+    function validateForm() {
+      var username = document.forms["chatForm"]["name"].value;
+      if (username == "") {
+        alert("Name must be filled out");
+        return false;
+      }
+      socket.emit('username', username);
+    }
+
     // append the chat text message
     socket.on('chat_message', function (msg) {
       $('#messages').append($('<li>').html(msg));
     });
+
     // append text if someone is online
     socket.on('is_online', function (username) {
       $('#messages').append($('<li>').html(username));
     });
+
     //isTyping event
     message.addEventListener("keypress", () => {
       socket.emit("typing", { user: username, message: "is typing..." });
@@ -97,6 +111,7 @@
       typing.innerText = data.user + "  " + data.message;
       console.log(data.user + data.message);
     });
+
     //stop typing
     message.addEventListener("keyup", () => {
       socket.emit("stopTyping", "");
@@ -106,4 +121,5 @@
     });
   </script>
   </body>
+
 </html>
